--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.2",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mercedlogger": "^1.0.1",
     "morgan": "^1.10.0",
