--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "mercedlogger": "^1.0.1",
     "morgan": "^1.10.0",
+    "natural": "^6.10.2",
     "nodemon": "^3.0.2",
     "radio-browser": "^2.2.3"
   }
